--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</section>
 	</main>
 	<footer>
-		<img src="img/nodschool.svg"></a>
+		<img src="https://www.carnesdoggi.de/images/Katze%20web.jpg"></a>
 	</footer>
 	<script src="design/index.js"></script>
 </body>
